<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_note_edit_text">Название заметки</string>
    <string name="date_edit_text">дата заметки</string>
    <string name="description_edit_text">описание заметки</string>
    <string name="text_button_save">Сохранить</string>
    <string name="text_button_open_notes">Open notes</string>
    <string name="menu_title">menu_title</string>
    <string name="settings">settings</string>
    <string name="main">main</string>
    <string name="favorite">favorite</string>
    <string name="search">search</string>
    <string name="back">back</string>
    <string name="fragment_navigation">fragment_navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>



</resources>