<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu"
        android:title="@string/menu_title"
        app:showAsAction="always"
        android:icon="@drawable/ic_menu_pound"/>


    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:title="@string/settings" />
    <item
        android:id="@+id/action_main"
        android:icon="@android:drawable/ic_menu_compass"
        android:orderInCategory="10"
        android:title="@string/main"/>
    <item
        android:id="@+id/action_favorite"
        android:icon="@android:drawable/btn_star_big_on"
        android:orderInCategory="20"
        android:title="@string/favorite"/>







</menu>