<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/profile_padding">


    <EditText
        android:id="@+id/name_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_note_edit_text"
        android:textSize="38sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/note_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_edit_text"
        android:inputType="date"
        android:textSize="38sp" />

    <EditText
        android:id="@+id/description_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_edit_text"
        android:textSize="24sp"
        android:textStyle="italic" />

</LinearLayout>